--- a/kasa/src/components/Cards/Cards.css
+++ b/kasa/src/components/Cards/Cards.css
@@ -1,87 +1,96 @@
+
 .outCards {
-  align-items: center;
-  background-color: #f6f6f6;
-  border-radius: 25px;
-  margin-top: 43px;
-  margin-bottom: 43px;
-  padding:50px
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #f6f6f6;
+	border-radius: 25px;
+	margin-top: 43px;
+	margin-bottom: 43px;
 }
 
 .Cards {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 50px;
- 
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 60px;
+	margin: 50px;
 }
+
 .card-container {
-  height: 340px;
-  position: relative;
+	width: 100%;
+	height: 340px;
+	position: relative;
 }
 .card-container::after {
-  background: linear-gradient(180deg, hsla(0, 0%, 100%, 0), rgba(0, 0, 0, 0.5));
-  content: "";
-  inset: 0;
-  position: absolute;
-  opacity: 30%;
-  border-radius: 10px;
+	background: linear-gradient(180deg, hsla(0, 0%, 100%, 0), rgba(0, 0, 0, 0.5));
+	content: "";
+	inset: 0;
+	position: absolute;
+	opacity: 30%;
+	border-radius: 10px;
 }
 
 .Cards img {
-  position: relative;
-  border-radius: 10px;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+	position: relative;
+	border-radius: 10px;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .Cards p {
-  position: absolute;
-  left: 20px;
-  top: 268px;
-  color: white;
-  font-size: 18px;
-  z-index: 1;
+	position: absolute;
+	left: 20px;
+	top: 268px;
+	color: white;
+	font-size: 18px;
+	z-index: 1;
 }
 
-@media screen and (max-width: 1023px) {
-  .outcard{
-    padding:30px;
-  }
-  .Cards {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
-  }
-  .card-container {
-    height: 255px;
-    
-  }
-  .Cards p {
-    position: absolute;
-    left: 19.71px;
-    top: 188px;
-  }
+@media screen and (max-width: 991px) {
+	.Cards {
+		grid-template-columns: repeat(2, 1fr);
+		gap: 40px;
+		margin: 40px;
+	}
+	.card-container {
+		height: 255px;
+	}
+	.Cards p {
+		position: absolute;
+		left: 19.71px;
+		top: 188px;
+	}
 }
 
 @media screen and (max-width: 768px) {
-  .outCards {
-    
-    padding: 20px;
-  }
-  .Cards {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 22px;
-  }
-  .card-container {
-    height: 255px;
-  }
-  .card img {
-    border-radius: 5px;
-  }
-  .Cards p {
-    position: absolute;
-    margin-top: 20px;
-    text-align: left;
-  }
+	.outCards {
+		background-color: white;
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
+	.card-container {
+		max-width: 100%;
+		height: 255px;
+	}
+	.card img {
+		border-radius: 5px;
+	}
+	.Cards p {
+		position: absolute;
+		margin-top: 20px;
+		text-align: center;
+	}
+	.Cards {
+		grid-template-columns: 1fr;
+		gap: 22px;
+		margin-inline: 5px;
+		margin-block: 5px;
+	}
+	.card-container {
+		margin-left: 0px;
+		margin-right: 0px;
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
 }
